Use ant correctly